--- a/app/src/main/res/layout/candidate_view.xml
+++ b/app/src/main/res/layout/candidate_view.xml
@@ -1,10 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <view xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     class="com.binglen.androidxxime.CandidateView"
     android:id="@+id/candidate_view"
     android:layout_width="wrap_content"
     android:layout_height="fill_parent"
-    android:layout_weight="1"
-    app:candidateViewStyle="line_fix_width"
-    app:tag="Word View" />
+    android:layout_weight="1" />
